--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@ and open the template in the editor.
         <div class="jumbotron">
             <h2 class="page-header text-center">Covid Tracker</h2>
         </div>
+        <div class="text-center">
+            <input type="text" id="countrysearch" name="countrysearch" placeholder="search here...">
+            <input type="submit" class="btn btn-success" onclick="findcountry()" value="Search for Country">
+            <input type="reset" class="btn btn-success" onclick="reloading()" value="Refresh before a new search">
+        </div><br>
         <div class="table-responsive container">
             <table class="table table-striped table-bordered" id="tablevalue">
                 <tr>
@@ -30,7 +35,9 @@ and open the template in the editor.
                 </tr> 
 
             </table>
+            
         </div>
+        
         <script src="covidtrack.js" type="text/javascript"></script>
     </body>
 </html>
